force-app/main/default/objects/ZRH_PaquetesPlan__c/ZRH_PaquetesPlan__c.object-meta.xml
<CustomObject>
    <description>guardamos la relacion entre Quote Line Item - Convenio - Asistencia</description>
    <label>Paquete de Plan</label>
    <nameField>
        <label>ZRH_PaquetesPlan</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paquetes de Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>