force-app/main/default/objects/ZRH_PaquetesPlan__c/fields/ZRH_Convenio__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Convenio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Convenio</label>
    <referenceTo>ZRH_Convenio__c</referenceTo>
    <relationshipLabel>Paquetes de Plan</relationshipLabel>
    <relationshipName>Paquetes_de_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>