force-app/main/default/objects/ZRH_PaquetesPlan__c/fields/ZRH_PlanPaquete__c.field-meta.xml
<CustomField>
    <fullName>ZRH_PlanPaquete__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan Paquete</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Paquetes de Plan</relationshipLabel>
    <relationshipName>Paquetes_de_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>